--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 *checkpoint.ipynb
 .DS_Store
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
+.ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
