--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .DS_Store
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
+.ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
