--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
+.ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
