--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
+.ipynb_checkpoints/inversion_ext-checkpoint.jl
+.ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
