--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/inversion_ext-checkpoint.jl
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
+.ipynb_checkpoints/Flux_function_ext-checkpoint.jl
+.ipynb_checkpoints/inversion-checkpoint.jl
