looking at the solution in detail

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/Flux_function_ext-checkpoint.jl
 .ipynb_checkpoints/inversion-checkpoint.jl
+Resultados/Movies/zero_sourcebig_pulse_to_the_right_E.gif
+Resultados/Movies/flu_big_pulse_to_the_right_E.gif
+Resultados/Movies/zero_sourcebig_pulse_to_the_right_E.gif
