--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 Resultados/Movies/zero_sourcebig_pulse_to_the_right_E.gif
 Resultados/Movies/flu_big_pulse_to_the_right_E.gif
 Resultados/Movies/zero_sourcebig_pulse_to_the_right_E.gif
+.ipynb_checkpoints/inversion_ext-checkpoint.jl
+.ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
