--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Resultados/Movies/flu_big_pulse_to_the_right_E.gif
 Resultados/Movies/zero_sourcebig_pulse_to_the_right_E.gif
 .ipynb_checkpoints/inversion_ext-checkpoint.jl
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
+.ipynb_checkpoints/inversion_ext-checkpoint.jl
