--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ Resultados/Movies/zero_sourcebig_pulse_to_the_right_E.gif
 .ipynb_checkpoints/inversion_ext-checkpoint.jl
 .ipynb_checkpoints/Principal_Symbol-checkpoint.ipynb
 .ipynb_checkpoints/inversion_ext-checkpoint.jl
+*.gif
+*.gif
