--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Resultados/Movies/zero_sourcebig_pulse_to_the_right_E.gif
 .ipynb_checkpoints/inversion_ext-checkpoint.jl
 *.gif
 *.gif
+.ipynb_checkpoints/inversion_ext-checkpoint.jl
